fix(basic-2.5, 3.1, 3.2, 3.3): HTML Line-Wrapping, Uniform naming style for selectors

--- a/style.css
+++ b/style.css
@@ -6,30 +6,30 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header a {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-  .aaa { 
+  .header { 
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -41,7 +41,7 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.adding-wrapper {
   display: flex;
 }
 
@@ -77,7 +77,7 @@ button:hover {
 /* Heading */
 
 h3,
-label[for="new-task"] {
+label[for="add-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +87,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+input.task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -100,18 +100,18 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+input.task:focus {
   color: #333;
 }
 
 /* New Task */
 
-label[for="new-task"] {
+.add-tittle {
   display: block;
   margin: 0 0 20px;
 }
 
-input #new-task {
+input#add-task {
   width: 318px;
 }
 
@@ -130,7 +130,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox-task {
   margin: 0 10px;
 }
 
@@ -141,7 +141,7 @@ li > label {
   width: 226px;
 }
 
-li > input[type="text"] {
+li > input.task {
   width: 226px;
 }
 
@@ -157,18 +157,18 @@ button.delete img:hover {
 
 /* Completed */
 
-ul #completed-tasks label {
+ul#completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 
-ul li input[type="text"] {
+ul li input.task {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+ul li.editMode input.task {
   display: inline-block;
   width: 224px;
 }
